--- a/index.html
+++ b/index.html
@@ -8,5 +8,19 @@
 </head>
 <body>
    <h1>Nagłówek</h1>
+   <h2>Nagłówe 2</h2>
+
+   <table>
+       <tbody>
+           <tr>
+               <td>
+                   1
+               </td>
+               <td>
+                   2
+               </td>
+           </tr>
+       </tbody>
+   </table>
 </body>
 </html>
