basic html file

--- a/index.html
+++ b/index.html
@@ -3,24 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Strona domowa</title>
+    <title>Polskie smaki - najlepsza resteuracja w Warszawie</title>
+    <meta name="description" content="Zapraszamy do najlepszej resteuracji z polską kuchnią w Warszawie!">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-   <h1>Nagłówek</h1>
-   <h2>Nagłówe 2</h2>
-
-   <table>
-       <tbody>
-           <tr>
-               <td>
-                   1
-               </td>
-               <td>
-                   2
-               </td>
-           </tr>
-       </tbody>
-   </table>
+   Hello world
 </body>
 </html>
