--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <meta name="description" content="Zapraszamy do najlepszej resteuracji z polską kuchnią w Warszawie!">
     <link rel="stylesheet" href="css/global.css">
     <link rel="stylesheet" href="css/main-banner.css">
+    <link rel="stylesheet" href="css/container.css">
+    <link rel="stylesheet" href="css/about-us.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
         integrity="sha256-l85OmPOjvil/SOvVt3HnSSjzF1TUMyT9eV0c2BzEGzU=" crossorigin="anonymous" />
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@400;700&display=swap" rel="stylesheet">
@@ -16,7 +18,25 @@
        <a href="#about-us" class="main-banner__button">
            Poznaj nas lepiej
        </a>
-
    </section>
+   <div class=container>
+       <section class="about-us">
+           <div class="about-us__text">
+            <h3 class="about-us__header">NIE JESTEŚMY TYLKO RESTEURACJĄ</h3>
+            <p class="about-us__paragraph">
+                Tworzymy zaspół ludzi, których pasją jest dbanie o każdy detal, który składa się na wyjątkowy wieczór spędzony u
+                nas. Nasi kucharze kreują dania, nad których recepturą pracowali niekiedy połowę swojego życia, a tajniki swoich
+                przepisów wynieśli z rodzinnych domów.
+            </p>
+            <p class="about-us__paragraph">
+                Nasi kelnerzy to ludzie z pasją, kochający tworzyć wyjątkowy klimat wokół naszych gości i serwować dania z elegancją
+                i klasą. W naszej resteuracji nie zabraknie nastrojowych dźwięków, smacznego wystroju i pięknych widoków z okien. To
+                idealne miejsce, by spędzić czas z ukochaną osobą, zjeść obiad w rodzinnej atmosferze czy podziękować bliskiej
+                osobie za to że jest.
+            </p>
+           </div>
+           <img class="about-us__image" src="/images/about-us.jpg" alt="">
+       </section>
+   </div>
 </body>
 </html>
