all bookmarks added

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="css/container.css">
     <link rel="stylesheet" href="css/about-us.css">
     <link rel="stylesheet" href="css/main-navigation.css">
+    <link rel="stylesheet" href="css/bookmark.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
         integrity="sha256-l85OmPOjvil/SOvVt3HnSSjzF1TUMyT9eV0c2BzEGzU=" crossorigin="anonymous" />
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@400;700&display=swap" rel="stylesheet">
@@ -49,7 +50,7 @@
                     </a>
                 </li>
                 <li class="main-navigation__menu-item">
-                    <a href="#map" class="main-navigation__link">
+                    <a href="#route" class="main-navigation__link">
                         Jak dojechać
                     </a>
                 </li>
@@ -95,5 +96,21 @@
            
        </section>
    </div>
+   <section class="bookmark bookmark--menu" id="menu">
+       <h2 class="bookmark__header">Menu</h2>
+       <p class="bookmark__descripion">Spójrz, co dla Ciebie przygotowaliśmy</p>
+   </section>
+    <section class="bookmark bookmark--gallery" id="gallery">
+        <h2 class="bookmark__header">Galeria</h2>
+        <p class="bookmark__descripion">Tak wyglądają nasze posiłki</p>
+    </section>
+    <section class="bookmark bookmark--contact" id="contact">
+        <h2 class="bookmark__header">Kontakt</h2>
+        <p class="bookmark__descripion">Porozmawiaj z nami lub zarezerwuj stolik</p>
+    </section>
+    <section class="bookmark bookmark--route" id="route">
+        <h2 class="bookmark__header">Jak dojechać</h2>
+        <p class="bookmark__descripion">Łatwo nas znajdziesz</p>
+    </section>
 </body>
 </html>
